--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -14,16 +14,17 @@
     "createdBy": "के द्वारा बनाई गई",
     "provideAccessCode": "एक्सेस कोड",
     "enterAccessCode": "एक्सेस कोड दर्ज करें",
-    "aboutUsTitle": "हमारे बारे में"
+    "aboutUsTitle": "हमारे बारे में",
+    "privacyPolicy": "आगे बढ़कर आप हमारी गोपनीयता नीति की शर्तों को स्वीकार करते हैं"
   },
   "helpVirufy": {
     "ourSupporters": "हमारे समर्थक",
-    "introParagraph": "हमारे अनुसंधान में आपका स्वागत है!\nइसे पूरा करने में आपको केवल 5 मिनट का समय लगना चाहिए।\nशुरू करने से पहले, आइए चर्चा करें कि हम क्या शामिल करेंगे:",
-    "aboutParagraph": "विरुफाई एक गैर-लाभकारी संगठन है जो कम आय वाले देशों के लाभ के लिए स्मार्टफोन के उपयोग के माध्यम से खांसी के पैटर्न से तेजी से और बिना किसी कीमत के कोविड-19 की जांच के लिए कृत्रिम बुद्धिमत्ता (Al) का उपयोग करने के साधन विकसित करने के लिए काम कर रहा है। हमारी टीम में 25 से अधिक देशों के शोधकर्ता शामिल हैं। हमारे शोध से पता चला है कि अल तकनीक कोविड के अद्वितीय खांसी हस्ताक्षर की पहचान करने में सक्षम हो सकती है।दुनिया भर के लोगों से खांसी की रिकॉर्डिंग एकत्र करके, विरुफाई कोविड के अद्वितीय ध्वनि पैटर्न को पहचानने में अपने AI एल्गोरिथम की मजबूती में सुधार कर रहा है।\nआपके पास हमारे अनुसंधान में अपनी खांसी का योगदान देकर दुनिया भर में लाखों लोगों को लाभान्वित करने में मदद करने की शक्ति है।",
+    "introParagraph": "<strong>कृपया ध्यान दें:</strong> <i>यह फ़ॉर्म केवल डेटा संग्रहण के लिए है। यह आपकी COVID-19 स्थिति की भविष्यवाणी नहीं करेगा या किसी बीमारी, विकार या अन्य स्वास्थ्य स्थिति का निदान नहीं करेगा। विरुफी अनुसंधान कर रहा है और आपके द्वारा प्रदान की गई जानकारी का उपयोग केवल उस शोध के लिए करेगा। विरूफी डॉक्टर की जगह नहीं लेगा और आपको याद दिलाना चाहता है कि डॉक्टर से चिकित्सकीय सलाह लेना आपकी जिम्मेदारी है।</i>",
+    "aboutParagraph": "<0><strong>विरूफी</strong> एक मजबूत <strong>501(c)(3) गैर-लाभकारी</strong> कंपनी है, जिसमें <strong>250 स्वयंसेवक/कर्मचारी</strong> और <strong>50 सहयोगी संगठन< हैं। /मजबूत> Amazon वेब सर्विसेज, स्टैनफोर्ड COVID-19 रिस्पांस इनोवेशन लैब और वन यंग वर्ल्ड सहित। हमने एक स्मार्टफोन ऐप विकसित किया है जो <strong>COVID पॉजिटिव खांसी डेटा के साथ उनकी समानता निर्धारित करने के लिए</strong> रिकॉर्ड की गई खांसी के हस्ताक्षर का विश्लेषण करने के लिए AI का लाभ उठाता है। विरुफी को यूडब्ल्यू, स्टैनफोर्ड, यूसी बर्कले, एमआईटी, हार्वर्ड और सीएमयू के फैकल्टी और पूर्व छात्रों का समर्थन प्राप्त है।</0> <1>दुनिया भर के लोगों से <strong>खांसी की रिकॉर्डिंग</strong> एकत्र करके, विरूफी सुधार कर रहा है COVID के अद्वितीय ध्वनि पैटर्न को पहचानने में इसके AI एल्गोरिदम की मजबूती।</strong>अपनी खांसी में योगदान देकर</strong> दुनिया भर में लाखों लोगों को लाभान्वित करने में मदद करने के लिए आपके पास</strong> शक्ति है</strong> हमारे अध्ययन में।</2>",
     "bulletsIntro": "प्रस्तावना: , हमारे बारे में और सुरक्षा अनुस्मारक",
     "bulletCough": "फोन में खांसी",
     "bulletQuestions": "स्वास्थ्य प्रश्न",
-    "nextButton": "अगला",
+    "nextButton": "अनुमति",
     "installApp": "एक ऐप के रूप में स्थापित करें"
   },
   "beforeStart": {
@@ -92,10 +93,13 @@
     "resultModal": "<strong>Important note:</strong> This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
     "resultNotDetected": "कोविड -19: पता नहीं चला",
     "resultNotDetectedText": " ऐसा लगता है कि आपकी आवाज़ में कोविड-19 के संकेतक नहीं हैं। कृपया अपने स्वास्थ्य देखभाल पेशेवर या लागू नियामक निकाय की सलाह के आधार पर <strong>उचित उपाय करना जारी रखें</strong> और प्रतिदिन हमारे ऐप में अपना पुनर्मूल्यांकन करें।",
-    "resultNotAnalyze": "विश्लेषण करने में असमर्थ",
-    "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please submit another cough.",
+    "resultNotAnalyze": "खांसी का विश्लेषण करने में असमर्थ",
+    "resultModalDummy": "<strong>महत्वपूर्ण नोट:</strong> यह ऐप केवल प्रदर्शन उद्देश्यों के लिए है और सही भविष्यवाणी प्रदान नहीं करता है। कृपया अपनी खाँसी में योगदान करने के लिए विरूफी स्टडी पर जाएँ।",
+    "resultNotAnalyzeText": "हमारा एल्गोरिदम आपकी COVID-19 स्थिति निर्धारित करने में सक्षम नहीं है। <strong>कृपया दूसरी खांसी सबमिट करें</strong>।",
+    "resultDetectedDummy": "COVID-19: पता चला <br/>(डमी उदाहरण)",
+    "resultDetectedText": "आपकी आवाज़ में संभावित COVID-19 के संकेत हैं। <strong>कृपया अपने स्वास्थ्य देखभाल पेशेवर से संपर्क करें</strong> और अतिरिक्त सावधानी बरतें।",
+    "testForCovid": "COVID-19 के लिए टेस्ट",
     "resultDetected": "कोविड -19: पता चला",
-    "resultDetectedText": "Your voice has indicators of possible COVID-19. Please contact your healthcare professional and take additional precautions.",
     "likelihoodPrefix": "कोविड -19 परिणाम:",
     "nextButton": "एक और खांसी जमा करें",
     "submitError": "एक त्रुटि पाई गई। कृपया पुन: प्रयास करें।",
