--- a/src/locales/mn.json
+++ b/src/locales/mn.json
@@ -13,16 +13,17 @@
       "createdBy": "Бүтээсэн",
       "provideAccessCode": "Нэвтрэх код",
       "enterAccessCode": "Хандалтын кодыг оруулна уу",
-      "aboutUsTitle": "Бидний тухай"
+      "aboutUsTitle": "Бидний тухай",
+      "privacyPolicy": "Продолжая, вы принимаете условия нашей Политики конфиденциальности"
     },
     "helpVirufy": {
       "ourSupporters": "Манай дэмжигчид",
-      "introParagraph": "Манай судалгаанд тавтай морилно уу! Үүнийг дуусгахад ердөө 5 минут л хангалттай. Эхлэхээсээ өмнө юу авч үзэх талаар ярилцъя.",
-      "aboutParagraph": "<0> Вируфай нь <strong> хиймэл оюун ухаан (ХОУ) ашиглан хүмүүсийн ханиалгах дуу чимээнээс COVID-19 ийн загвар илрүүлж <strong> түүнийгээ цаашид ашиглах арга хэрэгслийг хөгжүүлэхээр ажиллаж байгаа <strong> бөгөөд хөгжиж буй орнуудад туслахын тулд ухаалаг гар утас ашиглан ямар ч үнэ төлбөргүй хэрэглэх боломжийг бүрдүүлхийн тулд ажиллаж буй ашгийн бус байгууллага юм. </0> <1> Манай багт <strong> 25 гаруй орны </strong> судлаачид багтдаг. <3> Бидний судалгаагаар </3> ХОУ технологи нь COVID-19 -ийн өвөрмөц ханиалгах дуу чимээний онцлогийг таних боломжтой болох нь харагдсан. Бид COVID-19 -ийн өвөрмөц дууны хэв маягийг танихын тулд хиймэл оюун ухааны алгоритмынхаа чанарыг сайжруулж байгаа юм. </2> <3> <strong> Та манай судалгаанд ханиалгах дуу чимээ буюу аудио өгөгдөл хандивлснаар дэлхийн өнцөг булан бүрт байгаа сая сая хүмүүст туслалцаа үзүүлэх боломжтой юм. </strong>  </3>",
+      "introParagraph": "<strong>Обратите внимание:</strong> <i>Эта форма предназначена только для сбора данных. Она не позволяет предсказать ваш статус COVID-19 или диагностировать какое-либо заболевание, расстройство или другое состояние здоровья. Virufy проводит исследования и будет использовать предоставленную вами информацию только для этих исследований. Virufy не заменяет врача и напоминает вам, что вы обязаны обращаться за советом к своему врачу.</i>",
+    "aboutParagraph": "<0><strong>Virufy</strong> – это надежная некоммерческая организация <strong>501(c)(3)</strong>, в которой работает <strong>250 добровольцев/сотрудников</strong> и <strong>50 партнерских организаций< /strong> включая Amazon Web Services, Стэнфордскую лабораторию инноваций по реагированию на COVID-19 и One Young World. Мы разработали приложение для смартфонов, которое использует искусственный интеллект для анализа признаков зарегистрированного кашля, чтобы <strong>определить их сходство с данными о положительном кашле на COVID</strong>. Virufy поддерживают преподаватели и выпускники Университета Вашингтона, Стэнфорда, Калифорнийского университета в Беркли, Массачусетского технологического института, Гарварда и CMU.</0> <1>Собирая <strong>записи кашля</strong> от людей со всего мира, Virufy улучшает надежность алгоритма искусственного интеллекта в распознавании уникального звукового паттерна COVID.</1><2><strong>У вас есть возможность</strong> помочь миллионам людей во всем мире, <strong>внося свой кашель</strong> в нашем исследовании.</2>",
       "bulletsIntro": "<strong> Танилцуулга: </strong> Бидний тухай болон Аюулгүй байдлын талаар",
       "bulletCough": "<strong> Утас руу ханиалгах </strong>",
       "bulletQuestions": "<strong> Эрүүл мэндийн талаархи хурдан асуултууд </strong>",
-      "nextButton": "Дараачийн",
+      "nextButton": "Согласие",
       "installApp": "Апп хэлбэрээр суулгана уу"
     },
     "beforeStart": {
@@ -91,10 +92,13 @@
       "resultModal": "<strong>Important note:</strong> This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
       "resultNotDetected": "COVID-19: ИЛРҮҮЛГЭЭГҮЙ",
       "resultNotDetectedText": "Таны хоолойд COVID-19-ийн шинж тэмдэг байхгүй бололтой. Эрүүл мэндийн мэргэжилтэн эсвэл холбогдох зохицуулах байгууллагын зөвлөгөөнд үндэслэн <strong>зохих арга хэмжээг үргэлжлүүлэн авч</strong> өдөр бүр манай аппликейшн дээр өөрийгөө дахин үнэлнэ үү.",
-      "resultNotAnalyze": "Шинжилгээ хийх боломжгүй",
-      "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please submit another cough.",
+      "resultNotAnalyze": "Невозможно проанализировать кашель",
+      "resultModalDummy": "<strong>Важное замечание:</strong> Это приложение предназначено только для демонстрационных целей и не дает истинного прогноза. Пожалуйста, посетите исследование Virufy, чтобы внести свой кашель.",
+      "resultNotAnalyzeText": "Наш алгоритм не в состоянии определить ваш статус COVID-19.<strong>Пожалуйста, представьте другой кашель</strong>.",
+      "resultDetectedDummy": "COVID-19: ОБНАРУЖЕН <br/>(Пример манекена)",
+      "resultDetectedText": "В вашем голосе есть признаки возможного COVID-19. <strong>Обратитесь к своему лечащему врачу</strong> и примите дополнительные меры предосторожности.",
+      "testForCovid": "Тест на COVID-19",
       "resultDetected": "COVID-19: ИЛРҮҮЛСЭН",
-      "resultDetectedText": "Your voice has indicators of possible COVID-19. Please contact your healthcare professional and take additional precautions.",
       "likelihoodPrefix": "COVID-19-ын үр дүн:",
       "nextButton": "Өөр ханиалгаж буй бичлэг илгээх",
       "submitError": "Алдаа гарлаа. Дахин оролдоно уу.",
