--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -13,16 +13,17 @@
       "createdBy": "তৈরি করেছেন",
       "provideAccessCode": "প্রবেশাধিকার কোড",
       "enterAccessCode": "অ্যাক্সেস কোড লিখুন",
-      "aboutUsTitle": "আমাদের সম্পর্কে"
+      "aboutUsTitle": "আমাদের সম্পর্কে",
+      "privacyPolicy": "এগিয়ে যাওয়ার মাধ্যমে আপনি আমাদের গোপনীয়তা নীতির শর্তাবলী স্বীকার করেন"
     },
     "helpVirufy": {
       "ourSupporters": "আমাদের সমর্থকরা",
-      "introParagraph": "আমাদের গবেষণায় স্বাগতম! এটি সম্পূর্ণ করতে আপনাকে মাত্র ৫ মিনিট সময় দিতে হবে। আমরা শুরু করার আগে, আসুন আমরা কী কাজ করব তা নিয়ে আলোচনা করি:",
-      "aboutParagraph": "<0> ভিরুফি একটি <strong> অলাভজনক প্রতিষ্ঠান </strong> যা দ্রুত এবং বিনা খরচে কোভিড -১৯ for এর স্ক্রিনিং করার জন্য <strong> কৃত্রিম বুদ্ধিমত্তা (AI) ব্যবহারের মাধ্যম তৈরিতে কাজ করছে স্বল্প আয়ের দেশগুলির সুবিধার জন্য স্মার্টফোন ব্যবহারের মাধ্যমে। <3> আমাদের গবেষণা </3> দেখিয়েছে যে AI প্রযুক্তি COVID এর অনান্য কাশি স্বাক্ষর সনাক্ত করতে সক্ষম হতে পারে। COVID এর অনন্য সাউন্ড প্যাটার্নকে স্বীকৃতি দেওয়ার জন্য এর AI অ্যালগরিদম টা উন্নত করা। আমাদের গবেষণায় </3>",
+      "introParagraph": "<strong>অনুগ্রহ করে মনে রাখবেন:</strong> <i>এই ফর্মটি শুধুমাত্র ডেটা সংগ্রহের জন্য। এটি আপনার COVID-19 স্থিতির পূর্বাভাস দেবে না বা কোনও রোগ, ব্যাধি বা অন্যান্য স্বাস্থ্যের অবস্থা নির্ণয় করবে না। Virufy গবেষণা পরিচালনা করছে এবং শুধুমাত্র সেই গবেষণার জন্য আপনার দেওয়া তথ্য ব্যবহার করবে। Virufy একজন ডাক্তারের জায়গা নেবে না এবং আপনাকে মনে করিয়ে দিতে চাই যে আপনার ডাক্তারের কাছ থেকে চিকিৎসার পরামর্শ নেওয়া আপনার দায়িত্ব৷</i>",
+    "aboutParagraph": "<0><strong>Virufy</strong> হল একটি শক্তিশালী <strong>501(c)(3) অলাভজনক</strong> কোম্পানি যার সাথে <strong>250 স্বেচ্ছাসেবক/স্টাফ</strong> এবং <strong>50টি অংশীদার সংস্থা< </strong> অ্যামাজন ওয়েব সার্ভিস, স্ট্যানফোর্ড কোভিড-১৯ রেসপন্স ইনোভেশন ল্যাব এবং ওয়ান ইয়াং ওয়ার্ল্ড সহ। আমরা একটি স্মার্টফোন অ্যাপ তৈরি করেছি যা <strong>কোভিড পজিটিভ কাশি ডেটার সাথে তাদের মিল নির্ণয় করতে</strong> রেকর্ড করা কাশির স্বাক্ষর বিশ্লেষণ করতে AI ব্যবহার করে। Virufy UW, Stanford, UC Berkeley, MIT, Harvard, এবং CMU-এর ফ্যাকাল্টি এবং প্রাক্তন ছাত্রদের দ্বারা সমর্থিত৷</0> <1>বিশ্বব্যাপী মানুষের কাছ থেকে <strong>কাশি রেকর্ডিং</strong> সংগ্রহ করে, Virufy উন্নতি করছে COVID-এর অনন্য সাউন্ড প্যাটার্ন শনাক্ত করার ক্ষেত্রে এর AI অ্যালগরিদমের দৃঢ়তা৷ আমাদের গবেষণায়।</2>",
       "bulletsIntro": "<strong> ভূমিকা: </strong> আমাদের সম্পর্কে এবং নিরাপত্তা অনুস্মারক",
       "bulletCough": "<strong> দয়া করে ফোনে কাশি দিন </strong>",
       "bulletQuestions": "<strong> দ্রুত স্বাস্থ্য প্রশ্ন </strong>",
-      "nextButton": "পরবর্তী",
+      "nextButton": "সম্মতি",
       "installApp": "অ্যাপ হিসেবে ইনস্টল করুন"
     },
     "beforeStart": {
@@ -91,10 +92,13 @@
       "resultModal": "<strong>Important note:</strong> This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
       "resultNotDetected": "COVID এর: সনাক্ত করা হয়নি",
       "resultNotDetectedText": "আপনার কণ্ঠস্বরে COVID এর সূচক আছে বলে মনে হচ্ছে না। <strong> অনুগ্রহ করে আপনার স্বাস্থ্যসেবা </strong>পেশাদার বা প্রযোজ্য নিয়ন্ত্রক সংস্থার পরামর্শের ভিত্তিতে যথাযথ ব্যবস্থা গ্রহণ করা চালিয়ে যান এবং প্রতিদিন আমাদের অ্যাপে নিজেকে পুনরায় মূল্যায়ন করুন।",
-      "resultNotAnalyze": "Unable to analyze",
-      "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please submit another cough.",
+      "resultNotAnalyze": "কাশি বিশ্লেষণ করতে অক্ষম",
+      "resultModalDummy": "<strong>গুরুত্বপূর্ণ নোট:</strong> এই অ্যাপটি শুধুমাত্র প্রদর্শনের উদ্দেশ্যে এবং সঠিক ভবিষ্যদ্বাণী প্রদান করে না। আপনার কাশিতে অবদান রাখতে অনুগ্রহ করে Virufy স্টাডিতে যান।",
+      "resultNotAnalyzeText": "আমাদের অ্যালগরিদম আপনার COVID-19 স্ট্যাটাস নির্ধারণ করতে সক্ষম নয়। <strong>অনুগ্রহ করে আরেকটি কাশি জমা দিন</strong>।",
+      "resultDetectedDummy": "COVID-19: শনাক্ত করা হয়েছে <br/>(ডামি উদাহরণ)",
+      "resultDetectedText": "আপনার ভয়েস সম্ভাব্য COVID-19 এর সূচক আছে। <strong>আপনার স্বাস্থ্যসেবা পেশাদারের সাথে যোগাযোগ করুন</strong> এবং অতিরিক্ত সতর্কতা অবলম্বন করুন।",
+      "testForCovid": "Test for COVID-19",
       "resultDetected": "COVID এর: শনাক্ত করা হয়েছে",
-      "resultDetectedText": "Your voice has indicators of possible COVID-19. Please contact your healthcare professional and take additional precautions.",
       "likelihoodPrefix": "COVID এর ফলাফল:",
       "nextButton": "আরেকটা কাশি রেকর্ড করুন",
       "submitError": "একটি ত্রুটি ঘটেছে ।  অনুগ্রহপূর্বক আবার চেষ্টা করুন । ",
