--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -13,17 +13,18 @@
     "createdBy": "Created By",
     "provideAccessCode": "Access code",
     "enterAccessCode": "Enter access  code",
-    "aboutUsTitle": "About Us"
+    "aboutUsTitle": "About Us",
+    "privacyPolicy": "En poursuivant, vous acceptez les termes de notre politique de confidentialité."
   },
   "helpVirufy": {
     "ourSupporters": "Our Supporters",
-    "introParagraph": "<p>Welcome to our study! This should only take you about 5 minutes to complete. Before we begin, let’s discuss what we will cover:</p>",
-    "aboutParagraph": "<0>Virufy is a <strong>nonprofit organization</strong> that is working to develop the means to use <strong> artificial intelligence (Al) to screen for COVID-19 from cough patterns</strong>rapidly and at no cost through use of a smartphone for the benefit of low-income countries.</0><1>Our team includes researchers from over <strong>25 countries</strong>.<3>Our research</3> has shown that Al technology may be able to identify COVID's unique cough signature.</1><2>By collecting <strong>coughs recordings</strong> from people around the world, Virufy is improving the robustness of its AI algorithm in recognizing COVID's unique sound pattern.</2><3><strong>You have the power</strong>to help benefit millions of people across the globe by <strong>contributing your cough</strong> in our study.</3>",
+    "introParagraph": "<strong>A noter :</strong> <i>Ce formulaire ne sert qu'à recueillir des données. Il ne permet pas de prédire votre statut COVID-19 ni de diagnostiquer une maladie, un trouble ou un autre état de santé. Virufy mène des recherches et utilisera les informations que vous fournissez uniquement dans le cadre de ces recherches. Virufy ne se substitue pas à un médecin et vous rappelle qu'il est de votre responsabilité de demander l'avis de votre médecin.</i>",
+    "aboutParagraph": "<0><strong>Virufy</strong> est une entreprise solide à but non lucratif <strong>501(c)(3)</strong> avec <strong>250 bénévoles/employés</strong> et <strong>50 organisations partenaires< /strong> y compris Amazon Web Services, Stanford COVID-19 Response Innovation Lab et One Young World. Nous avons développé une application pour smartphone qui exploite l'IA pour analyser la signature des toux enregistrées afin de <strong>déterminer leur similitude avec les données de toux positives au COVID</strong>. Virufy est soutenu par des professeurs et des anciens de l'UW, de Stanford, de l'UC Berkeley, du MIT, de Harvard et de la CMU.</0> <1>En collectant des <strong>enregistrements de la toux</strong> de personnes du monde entier, Virufy améliore la robustesse de son algorithme d'IA pour reconnaître le modèle sonore unique de COVID.</1><2><strong>Vous avez le pouvoir</strong> d'aider des millions de personnes à travers le monde en <strong>contribuant votre toux</strong> dans notre étude.</2>",
     "bulletsIntro": "<strong>Intro:</strong> About us and Safety Reminders",
     "bulletCough": "<strong>Cough Into Phone</strong>",
     "bulletQuestions": "<strong>Quick Health Questions</strong>",
     "installApp": "Install as an app",
-    "nextButton": "Let’s start"
+    "nextButton": "Consentement"
   },
   "beforeStart": {
     "title": "Lastly, before we start...",
@@ -89,10 +90,14 @@
     "resultModal": "This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsiblity to seek medical advice from your doctor.",
     "resultNotDetected": "COVID-19: NOT DETECTED",
     "resultNotDetectedText": "Your voice does not seem to have indicators of COVID-19. Please <strong>continue to take appropriate measures</strong> based on the advice of your healthcare professional or applicable regulatory body and reassess yourself in our app daily.",
-    "resultNotAnalyze": "Unable to analyze",
-    "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please <strong>continue to take appropriate measures</strong> based on the advice of your healthcare professional or applicable regulatory body and reassess yourself in our app daily.",
+    "resultNotAnalyze": "Incapable d'analyser la toux",
+    "resultModalDummy": "<strong>Remarque importante :</strong> Cette application est uniquement destinée à la démonstration et ne fournit pas de véritable prédiction. Veuillez visiter l'étude Virufy pour apporter votre contribution à la toux.",
+    "resultNotAnalyzeText": "Notre algorithme n'est pas en mesure de déterminer votre statut COVID-19.<strong>Veuillez soumettre une autre toux</strong>.",
+    "resultDetectedDummy": "COVID-19: DÉTECTÉ <br/>(Exemple fictif)",
+    "resultDetectedText": "Votre voix présente des indicateurs d'un possible COVID-19.<strong>Veuillez contacter votre professionnel de la santé</strong> et prendre des précautions supplémentaires.",
+    "testForCovid": "Test for COVID-19",
     "resultDetected": "COVID-19: DETECTED",
-    "resultDetectedText": "Your voice has indicators of COVID-19. Please contact your healthcare professional and take additional precautions.",
+
     "likelihoodPrefix": "COVID-19 result:",
     "nextButton": "Submit another cough",
     "submitError": "An error occurred. Please try again.",
