--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -13,16 +13,17 @@
     "createdBy": "Oluşturan",
     "provideAccessCode": "Giriş kodu",
     "enterAccessCode": "Erişim kodunu giriniz",
-    "aboutUsTitle": "Hakkımızda"
+    "aboutUsTitle": "Hakkımızda",
+    "privacyPolicy": "Devam ederek Gizlilik Politikamızın şartlarını kabul etmiş olursunuz"
   },
   "helpVirufy": {
     "ourSupporters": "Destekçilerimiz",
-    "introParagraph": "Çalışmamıza hoş geldiniz! Bu işlemi tamamlamanız yalnızca 5 dakikanızı alacaktır. Başlamadan önce, neleri ele alacağımızı tartışalım:",
-    "aboutParagraph": "<0>Virufy, düşük gelirli ülkelerin yararına, akıllı telefon kullanarak hızlı ve ücretsiz bir şekile öksürük kalıplarından COVID-19'u taramak için, <strong>yapay zekayı (Al) kullanmanın yollarını geliştirmeye çalışan, </strong>kar amacı gütmeyen bir kuruluştur</0><1>Ekibimiz <strong>25'ten fazla ülkenin</strong> araştırmacılardan oluşuyor. <3>Araştırmamız</3 > Al teknolojisinin COVID'in benzersiz öksürük imzasını tanımlayabildiğini göstermiştir.</1><2>Dünyanın dört bir yanındaki insanlardan <strong>öksürük kayıtları</strong> toplayan Virufy, COVID'in benzersiz ses düzenini tanıyarak, yapay zeka algoritmasını şu anda geliştirmeye çalışmaktadır. </2><3><strong>Çalışmamıza öksürüğünüzle katkıda bulunarak</strong> dünya genelinde milyonlarca insanın faydalanmasına yardımcı olacak güce sahipsiniz</3>",
+    "introParagraph": "<strong>Lütfen dikkat:</strong> <i>Bu form sadece veri toplamak içindir. COVID-19 durumunuzu tahmin etmeyecek veya herhangi bir hastalık, bozukluk veya başka bir sağlık durumunu teşhis etmeyecektir. Virufy bir araştırma yürütmektedir ve sağladığınız bilgileri yalnızca bu araştırma için kullanacaktır. Virufy bir doktorun yerini almayacaktır ve doktorunuzdan tıbbi tavsiye almanın sizin sorumluluğunuzda olduğunu hatırlatmak isteriz.</i>",
+    "aboutParagraph": "<0><strong>Virufy</strong>, <strong>250 gönüllü/personel</strong> ve <strong>50 ortak kuruluş< ile güçlü bir <strong>501(c)(3) kar amacı gütmeyen</strong> şirkettir. /strong> Amazon Web Services, Stanford COVID-19 Response Innovation Lab ve One Young World dahil. <strong>COVID pozitif öksürük verileriyle benzerliklerini belirlemek</strong> amacıyla kaydedilen öksürüklerin imzasını analiz etmek için yapay zekadan yararlanan bir akıllı telefon uygulaması geliştirdik. Virufy, UW, Stanford, UC Berkeley, MIT, Harvard ve CMU'dan fakülte ve mezunlar tarafından desteklenmektedir.</0> <1>Virufy, dünyanın dört bir yanındaki insanlardan <strong>öksürük kayıtları</strong> toplayarak, AI algoritmasının COVID'in benzersiz ses modelini tanıma konusundaki sağlamlığı.</1><2><strong>Öksürüğe katkıda bulunarak</strong> dünya çapında milyonlarca kişiye fayda sağlama gücüne sahipsiniz</strong> çalışmamızda.</2>",
     "bulletsIntro": "<strong>Giriş: </strong>Hakkımızda ve Güvenlik Hatırlatıcıları",
     "bulletCough": "<strong>Telefona Öksürük</strong>",
     "bulletQuestions": "<strong>Hızlı Sağlık Soruları</strong>",
-    "nextButton": "Sonraki",
+    "nextButton": "Rıza",
     "installApp": "Uygulamaui yükleyin"
   },
   "beforeStart": {
@@ -91,10 +92,13 @@
     "resultModal": "<strong>Important note:</strong> This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
     "resultNotDetected": "COVID-19: TESPİT EDİLMEDİ",
     "resultNotDetectedText": "Sesinizde COVID-19 belirtileri yok gibi görünüyor. Lütfen sağlık uzmanınızın veya geçerli düzenleyici kurumun tavsiyelerine göre <strong>uygun önlemleri almaya devam edin</strong> ve uygulamamızda her gün kendinizi yeniden değerlendirin.",
-    "resultNotAnalyze": "analiz edilemiyor",
-    "resultNotAnalyzeText": "Our algorithm is not able to determine your COVID-19 status. Please submit another cough.",
+    "resultNotAnalyze": "Öksürük Analiz Edilemiyor",
+    "resultModalDummy": "<strong>Önemli not:</strong> Bu uygulama sadece tanıtım amaçlıdır ve gerçek bir tahmin sağlamaz. Öksürüğünüzle katkıda bulunmak için lütfen Virufy Çalışmasını ziyaret edin.",
+    "resultNotAnalyzeText": "Algoritmamız COVID-19 durumunuzu belirleyemiyor.<strong>Lütfen başka bir öksürük gönderin</strong>.",
+    "resultDetectedDummy": "COVID-19: TESPİT EDİLDİ <br/>(Kukla Örnek)",
+    "resultDetectedText": "Sesinizde olası COVID-19 göstergeleri var. <strong>Lütfen sağlık uzmanınıza başvurun</strong> ve ek önlemler alın.",
+    "testForCovid": "COVID-19 için Test",
     "resultDetected": "COVID-19: TESPİT EDİLDİ",
-    "resultDetectedText": "Your voice has indicators of possible COVID-19. Please contact your healthcare professional and take additional precautions",
     "likelihoodPrefix": "COVID-19 sonucu:",
     "nextButton": "Başka bir öksürük gönderin",
     "submitError": "Bir hata oluştu. Lütfen tekrar deneyin.",
